--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,30 +70,40 @@ jobs:
           paths: [backend/node_modules]
           key: backend-deps
 
-#   test-frontend:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       # Restore from cache
-#       # Your job code here
-                
-#   test-backend:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       # Restore from cache
-#       # Your job code here
-            
-#   scan-frontend:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       # Restore from cache
-#       # Your job code here
+   test-frontend:
+     docker:
+       # Docker image here
+       - image: cimg/node:13.8.0
 
+       steps:
+        - checkout
+        - restore_cache:
+            keys: [frontend-deps]
+        - run:
+            name: Frond-end unit test
+            command: |
+               # Your code here
+               cd front-end
+               npm install
+               npm run build
+  
+   test-backend:
+     docker:
+       # Docker image here
+       - image: cimg/node:13.8.0
+ 
+       steps:
+        - checkout
+        - restore_cache:
+            keys: [backend-deps]
+        - run:
+            name: Back-end unit test
+            command: |
+               # Your code here
+               cd backend
+               npm install
+               npm run build
+  
 #   scan-backend:
 #     docker:
 #       # Docker image here
@@ -273,10 +283,10 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
+       - test-frontend:
+           requires: [build-frontend]
+       - test-backend:
+           requires: [build-backend]
       # - scan-backend:
       #     requires: [build-backend]
       # - scan-frontend:
