--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
           command: |
              cd frontend
              npm install
-             npm run build
+             npm test
   
   test-backend:
     docker:
@@ -96,7 +96,7 @@ jobs:
           command: |
              cd backend
              npm install
-             npm run build
+             npm test
   
 #   scan-backend:
 #     docker:
