--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,35 @@ jobs:
              cd backend
              npm install
              npm test
-  
+  scan-frontend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-deps]
+      - run:
+          name: front-end scan
+          command: |
+             cd frontend
+             npm install
+             npm audit --audit-level=critical
+  scan-backend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-deps]
+      - run:
+          name: front-end scan
+          command: |
+             cd frontend
+             npm install
+             npm audit --audit-level=critical
+              
+
+              
 #   scan-backend:
 #     docker:
 #       # Docker image here
