--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,11 +116,11 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [frontend-deps]
+          keys: [backend-deps]
       - run:
-          name: front-end scan
+          name: back-end scan
           command: |
-             cd frontend
+             cd backend
              npm install
              npm audit --audit-level=critical
               
@@ -309,10 +309,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
