--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint": "tslint -p tsconfig.json -c tslint.json --fix",
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -28,7 +28,7 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
     "migrations:create": "ts-node -r dotenv/config node_modules/.bin/typeorm migration:create",
     "premigrations:generate": "npm run build",
-    "migrations:generate": "ts-node -r dotenv/config node_modules/.bin/typeorm:win migration:generate",
+    "migrations:generate": "ts-node -r dotenv/config node_modules/.bin/typeorm migration:generate",
     "premigrations": "npm run build",
     "migrations": "ts-node -r dotenv/config node_modules/.bin/typeorm migration:run",
     "migrations-win": "ts-node node_modules/typeorm/cli.js migration:run",
@@ -38,33 +38,33 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^9.0.5",
-    "@nestjs/core": "^9.0.5",
+    "@nestjs/common": "^6.11.11",
+      "@nestjs/core": "^6.11.11",
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.11.11",
-    "@nestjs/swagger": "^6.0.4",
+    "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.3.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/winston": "^2.4.4",
-    "class-transformer": "^0.5.1",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "cli-color": "^1.3.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.17.1",
-    "express-jwt": "^7.7.5",
+    "express-jwt": "^5.3.1",
     "glee-jwks-rsa": "^1.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.28",
-    "passport": "^0.6.0",
+    "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
     "passport-jwt": "^4.0.0",
     "pg": "^7.9.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.6.7",
+    "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24",
     "uuid": "^3.4.0",
@@ -79,20 +79,20 @@
     "@types/joi": "^14.3.4",
     "@types/node": "^11.15.9",
     "@types/supertest": "^2.0.8",
-    "jest": "^28.1.3",
-    "nodemon": "^2.0.19",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.2",
-    "standard-version": "^9.5.0",
+    "standard-version": "^4.4.0",
     "supertest": "^3.4.2",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^24.3.0",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "5.11.0",
     "typescript": "^3.8.3",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^4.9.3",
     "webpack-node-externals": "^1.7.2"
   },
