--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "4.7.2",
     "@types/jest": "^24.0.15",
-    "@types/node": "12.6.2",
+    "@types/node": "*",
     "@types/react": "16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.4",
@@ -42,11 +42,11 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "file-loader": "^4.0.0",
-    "html-loader": "^4.1.0",
+    "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^4.0.0-beta.4",
     "identity-obj-proxy": "^3.0.0",
     "mini-css-extract-plugin": "^0.7.0",
-    "postcss": "^7.0.39",
+    "postcss": "^7.0.17",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -58,15 +58,15 @@
     "react-test-renderer": "^16.8.6",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^0.23.1",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "url-loader": "^2.0.1",
-    "webpack": "^5.73.0",
+    "webpack": "^4.35.3",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
@@ -77,14 +77,14 @@
     "@types/react-gravatar": "^2.6.7",
     "@types/react-tagsinput": "^3.19.5",
     "@types/redux-form": "^8.1.4",
-    "axios": "^0.27.2",
+    "axios": "^0.19.0",
     "axui-contextmenu": "^0.4.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^4.5.0",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
-    "jest": "^28.1.3",
-    "moment": "^2.29.4",
+    "jest": "^24.8.0",
+      "moment": "^2.24.0",
     "oauth-sign": "^0.9.0",
     "raf": "^3.4.1",
     "react": "^16.8.6",
