--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,9 +82,9 @@ jobs:
           name: Back-end build
           command: |
              cd backend
-             npm install --save-dev @jbiskur/nestjs-async-module
-             npm install
-             npm audit fix --force
+             #npm install --save-dev @jbiskur/nestjs-async-module
+             #npm install
+             #npm audit fix --force
              npm run build
       - save_cache:
           paths: [backend/node_modules]
