--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^6.11.11",
-      "@nestjs/core": "^6.11.11",
+    "@nestjs/core": "^6.11.11",
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.2.0",
@@ -49,16 +49,17 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/winston": "^2.4.4",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.9.1",
+    "class-validator": "^0.12.2",
     "cli-color": "^1.3.0",
+    "concurrently": "*",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "glee-jwks-rsa": "^1.1.0",
-    "concurrently":"*",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lite-server": "*",
     "moment-timezone": "^0.5.28",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
@@ -67,9 +68,9 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
+    "type": "module",
     "typeorm": "^0.2.24",
     "uuid": "^3.4.0",
-    "lite-server":"*",
     "winston": "^3.8.1",
     "winston-loggly-bulk": "^2.0.3",
     "winston-slack-webhook": "^0.1.6"
@@ -77,17 +78,17 @@
   "devDependencies": {
     "@nestjs/testing": "^6.11.11",
     "@types/express": "^4.17.3",
+    "@types/jasmine": "*",
     "@types/jest": "^24.9.1",
     "@types/joi": "^14.3.4",
-    "@types/node": "*",
-    "@types/jasmine":"*",
-    "@types/supertest": "^2.0.8",
+    "@types/node": "^11.15.9",
     "@types/superagent": "*",
+    "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.2",
-    "standard-version": "^4.4.0",
+    "standard-version": "^7.0.0",
     "supertest": "^3.4.2",
     "ts-jest": "^24.3.0",
     "ts-loader": "^4.4.2",
