--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,7 @@ jobs:
           name: Back-end build
           command: |
              cd backend
+             sudo chown -R $USER /usr/local/lib/node_modules
              npm install --save-dev @jbiskur/nestjs-async-module  
              npm install -g concurrently 
              npm install
