--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "cli-color": "^1.3.0",
+    "concurrently": "*",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.17.1",
