--- a/backend/package.json
+++ b/backend/package.json
@@ -94,10 +94,12 @@
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "5.11.0",
+    "typescript": "~2.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^4.9.3",
     "webpack-node-externals": "^1.7.2"
+
   },
   "jest": {
     "moduleFileExtensions": [
