--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,11 @@
     "webpack": "webpack --config webpack.config.js",
     "release": "standard-version",
     "premigrations:create": "npm run build",
+    "dev": "ts-node ./src/server.ts",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/ormconfig.ts",
+    "typeorm:win": "ts-node -r tsconfig-paths/register node_modules\\typeorm\\cli.js",
+    "migration:generate:win": "npm run typeorm:win migration:generate -- -n",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
     "migrations:create": "ts-node -r dotenv/config node_modules/.bin/typeorm migration:create",
     "premigrations:generate": "npm run build",
     "migrations:generate": "ts-node -r dotenv/config node_modules/.bin/typeorm migration:generate",
@@ -46,6 +51,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "cli-color": "^1.3.0",
+    "concurrently": "*",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.17.1",
@@ -53,6 +59,7 @@
     "glee-jwks-rsa": "^1.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lite-server": "*",
     "moment-timezone": "^0.5.28",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
@@ -63,15 +70,18 @@
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24",
     "uuid": "^3.4.0",
+    "winston": "^3.8.1",
     "winston-loggly-bulk": "^2.0.3",
     "winston-slack-webhook": "^0.1.6"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.11.11",
     "@types/express": "^4.17.3",
+    "@types/jasmine": "*",
     "@types/jest": "^24.9.1",
     "@types/joi": "^14.3.4",
     "@types/node": "^11.15.9",
+    "@types/superagent": "*",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
@@ -87,6 +97,7 @@
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^4.9.3",
     "webpack-node-externals": "^1.7.2"
   },
   "jest": {
