--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -34,7 +34,7 @@ Resources:
 
 Outputs:
   WorkflowID:
-    Value: !Sub ${WorkflowID}
+    Value: !Sub h12345
     Description: URL for website hosted on S3
     Export:
       Name: WorkflowID
