--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,9 @@ commands:
       - run: 
           name: Install ansible
           command: |
-           sudo apt update
-           sudo apt install software-properties-common
-           sudo add-apt-repository --yes --update ppa:ansible/ansible
-           sudo apt install ansible
+           sudo apt-get update
+            sudo apt-get install -y ansible
+            ansible --version
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
