--- a/.circleci/ansible/roles/configure-server/main.yml
+++ b/.circleci/ansible/roles/configure-server/main.yml
@@ -8,7 +8,7 @@
 - name: "Installing nodejs 13"
   become: true
   apt:
-    name: ["nodejs", "npm"]
+    name: ["nodejs"]
     state: latest
     update_cache: yes
 
