--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,8 +184,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-             - .circleci/ansible/inventory.txt
-#            - project/.circleci/ansible/inventory.txt
+            - project/.circleci/ansible/inventory.txt
       - destroy-environment:
           Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
