--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -16,12 +16,18 @@
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
         delay: 10
-        timeout: 300
+        timeout: 600
+    - name: "answer yes"
+      expect:
+        command: sendmailconfig
+        responses:
+          Question:
+          - Are you sure you want to continue connecting' : yes
     - name: "install python for Ansible."
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
       changed_when: false
-    - setup:    
+    
   # # Get the environment variables from CircleCI and add to the EC2 instance
   # environment:
   #    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
