--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,7 +204,7 @@ jobs:
           command: |
            cd .circleci/ansible
            cat inventory.txt
-           ansible-playbook -i inventory.txt -y configure-server.yml
+           ansible-playbook -i inventory.txt configure-server.yml 
       - destroy-environment:
           Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
