--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -6,6 +6,7 @@
   become_method: sudo
   become_user: root  
   gather_facts: false
+
   vars:
      ansible_python_interpreter: /usr/bin/python3
      ansible_host_key_checking: false
@@ -16,10 +17,14 @@
       wait_for_connection:
         delay: 10
         timeout: 600
+        host_key_checking : false
+
     - name: "install python for Ansible."
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
       changed_when: false
+      host_key_checking : false
+
     
   # # Get the environment variables from CircleCI and add to the EC2 instance
   # environment:
