--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,28 +1,30 @@
 ---
-- name: Update and upgrade apt packages
-  become: true
-  apt:
-    # upgrade: yes #no need to upgrade the existing system packages to reduce the build time
-    update_cache: yes
-    cache_valid_time: 86400 #One day
+  - name: "update packages."
+    become: true
+    apt:
+      update_cache: yes
 
-- name: "Add nodejs"
-  become: true
-  shell: |
-    curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
+  - name: "upgrade packages"
+    become: true
+    apt:
+      upgrade: yes
 
-
-- name: "Installing nodejs 13"
-  become: true
-  apt:
-    name: ["nodejs"]
-    state: latest
-    update_cache: yes
-
-- name: "Installing pm2"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
+  - name: "Install node.js from nodesource"
+    become: true
+    shell: |
+      curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+      sudo apt -y install nodejs
+  - name: "installing npm"
+    become: true
+    apt:
+      name: npm
+      update_cache: yes
+      state: latest
+  
+  - name: "install pm2"
+    become: true
+    npm:
+      name: pm2
+      global: yes
+      production: yes
+      state: present
