--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -24,7 +24,10 @@ Resources:
           FromPort: 9100
           ToPort: 9100
           CidrIp: 0.0.0.0/0
-
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
 
   EC2Instance:
     Type: AWS::EC2::Instance
@@ -32,7 +35,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
       - !Ref InstanceSecurityGroup
-      KeyName: udacity
+      KeyName: vockey
       ImageId: ami-0729e439b6769d6ab 
       Tags:
         - Key: Name
