--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,6 +205,7 @@ jobs:
           command: |
            cd .circleci/ansible
            cat inventory.txt
+           ansible -m ping all
            ansible-playbook -i inventory.txt configure-server.yml 
           no_output_timeout: 30m
       - destroy-environment:
