--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -35,7 +35,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
       - !Ref InstanceSecurityGroup
-      KeyName: vockey
+      KeyName: udacity
       ImageId: ami-0729e439b6769d6ab 
       Tags:
         - Key: Name
