--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,7 +253,9 @@ jobs:
             fi
       - destroy-environment:
           Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migration
+      - revert-migrations:
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
+
 
 #     
 #     
