--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ commands:
           command: |
             SUCCESS=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/migration_ << parameter.WorkFlow_ID >>)
             echo "success equals $SUCCESS"
-            if (("$SUCCESS" == 1 )); 
+            if [[ $SUCCESS == 1]]; 
             then
               cd ~/project/backend
               npm install
@@ -252,9 +252,9 @@ jobs:
               curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - destroy-environment:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
+          Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
+          Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
 
 
 #     
