--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,7 +249,7 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migration_dump.txt
             then
-              curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WorkFlow_ID:0:7} -d '1'
             fi
       - destroy-environment:
           Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
