--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,9 +252,9 @@ jobs:
               curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WorkFlow_ID:0:7} -d '1'
             fi
       - destroy-environment:
-          Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+          Workflow_ID: "${CIRCLE_WorkFlow_ID:0:7}"
       - revert-migrations:
-          Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+          Workflow_ID: "${CIRCLE_WorkFlow_ID:0:7}"
 
 
 #     
