--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,22 +25,21 @@ commands:
     parameters:
       Workflow_ID:
         type: string
-        default: ${CIRCLE_WORKFLOW_ID:0:7}
+        default: ${CIRCLE_WorkFlow_ID:0:7}
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
            aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive || echo "failed to remove the s3 files"
-           aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" || echo "failed to remove the frontend stack"
-           aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" || echo "failed to remove the backend stack"
+           aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WorkFlow_ID:0:7}" || echo "failed to remove the frontend stack"
+           aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WorkFlow_ID:0:7}" || echo "failed to remove the backend stack"
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
       Workflow_ID:
         type: string
-        default: ${CIRCLE_WORKFLOW_ID:0:7}
     steps:
       - run:
           name: revert migration
@@ -249,12 +248,12 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migration_dump.txt
             then
-              curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WorkFlow_ID:0:7} -d '1'
+              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WorkFlow_ID:0:7} -d '1'
             fi
       - destroy-environment:
-          Workflow_ID: "${CIRCLE_WorkFlow_ID:0:7}"
+          Workflow_ID: ${CIRCLE_WorkFlow_ID:0:7}
       - revert-migrations:
-          Workflow_ID: "${CIRCLE_WorkFlow_ID:0:7}"
+          Workflow_ID: ${CIRCLE_WorkFlow_ID:0:7}
 
 
 #     
