--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,8 +252,8 @@ jobs:
             fi
       - destroy-environment:
           Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations
-          # Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
 #     
