--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ commands:
           name: revert migration
           when: on_fail
           command: |
-           SUCCESS=$(curl --insecure https://kvdb.io/BmmHvGiTjDnxMkWErWBeYK/migration_<parameters.Workflow_ID>>)
+           SUCCESS=$(curl --insecure https://kvdb.io/BmmHvGiTjDnxMkWErWBeYK/migration_<<parameters.Workflow_ID>>)
            echo "success equals $SUCCESS"
            if [[ $SUCCESS == 1]]; 
            then
