--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,13 +1,12 @@
-NODE_ENV=local
+NODE_ENV=production
 VERSION=1
 TYPEORM_CONNECTION=postgres
-TYPEORM_MIGRATIONS_DIR=./src/migrations
-TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
-TYPEORM_MIGRATIONS=./src/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR=./migrations
+TYPEORM_ENTITIES=./modules/domain/**/*.entity.ts
+TYPEORM_MIGRATIONS=./migrations/*.ts
 
-# Use these values for the local PG database from the Docker Compose file
-TYPEORM_HOST=localhost
+TYPEORM_HOST=postgres.cgretkc6gqxd.us-east-1.rds.amazonaws.com
 TYPEORM_PORT=5532
 TYPEORM_USERNAME=postgres
-TYPEORM_PASSWORD=password
+TYPEORM_PASSWORD=B6ZMqrT3eCB37W4RE4g1
 TYPEORM_DATABASE=glee
