--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,6 +246,7 @@ jobs:
           command: |
             cd backend
             npm install 
+            npm run build
             npm run migrations > migration_dump.txt
       - run:
           name: Sending migration results to memstash
