--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,15 +247,15 @@ jobs:
             cd backend
             npm install 
             npm run build
-            npm run migrations > migration_dump.txt
+            npm run migration > migration_dump.txt
       - run:
           name: Sending migration results to memstash
           no_output_timeout: 10m
           command: |
-            cat ~/project/backend/migrations_dump.txt
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            cat ~/project/backend/migration_dump.txt
+            if grep -q "has been executed successfully." ~/project/backend/migration_dump.txt
             then
-              curl -d '1' https://kvdb.io/BmmHvGiTjDnxMkWErWBeYK/migration_${CIRCLE_WORKFLOW_ID:0:7} -k
+              curl -d '1' https://kvdb.io/BmmHvGiTjDnxMkWErWBeYK/migration_${CIRCLE_WORKFLOW_ID:0:7}
             fi
       - destroy-environment:
           Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
