--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,7 @@ jobs:
             cd backend
             npm install 
             npm run build
-            npm run migration > migration_dump.txt
+            npm run migrations > migration_dump.txt
       - run:
           name: Sending migration results to memstash
           no_output_timeout: 10m
