--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,13 +249,15 @@ jobs:
             npm run migrations > migration_dump.txt
       - run:
           name: Sending migration results to memstash
-          no_output_timeout: 10m
           command: |
-            cat ~/project/backend/migration_dump.txt
-            if grep -q "has been executed successfully." ~/project/backend/migration_dump.txt
+            cat ~/project/backend/migrations_dump.txt
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl -d '1' https://kvdb.io/BmmHvGiTjDnxMkWErWBeYK/migration_${CIRCLE_WORKFLOW_ID:0:7} -k
-            fi
+             echo "setting the bucket value with 1"
+             echo https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}
+             curl -d '1' https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -k
+            fi   
+     
       - destroy-environment:
           Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
