--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,26 +1,31 @@
 ---
-- name: Update and upgrade apt packages
-  become: true
-  shell: |
-    curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+
+  - name: "update packages."
+    become: true
+    apt:
+      update_cache: yes
+
+  - name: "upgrade packages"
+    become: true
+    apt:
+      upgrade: yes
+
+  - name: "Install node.js from nodesource"
+    become: true
+    shell: |
+      curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+      sudo apt -y install nodejs
+  - name: "installing npm"
+    become: true
+    apt:
+      name: npm
+      update_cache: yes
+      state: latest
   
-- name: "Installing dependencies"
-  become: true
-  apt:
-    name: ["nodejs"]
-    state: latest
-    update_cache: yes
-- name: "installing npm"
-  become: true
-  apt:
-    name: npm
-    update_cache: yes
-    state: latest
- 
-- name: "Installing pm2"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
+  - name: "install pm2"
+    become: true
+    npm:
+      name: pm2
+      global: yes
+      production: yes
+      state: present
