--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: Starting the app with pm2
   become: true
   shell: |
-    cd ~/backend/dist
+    cd ~/backend-app/dist
     pm2 stop default
     pm2 start -f main.js
   register: execute_node
