--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -415,7 +415,8 @@ jobs:
             --stack-name InitialStack \
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
             --tags project=udapeople
-
+            echo OldID: "${OldWorkflowID}"
+            echo CurrentID "${CIRCLE_WORKFLOW_ID:0:7}"
          # --tags project=udapeople
 
       - destroy-environment:
